--- a/SoteriaAppSln/SoteriaProjectWebApi/appsettings.json
+++ b/SoteriaAppSln/SoteriaProjectWebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SoteriaConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SoteriaDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
