,Created Login Page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/SoteriaApp - Backup.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/SoteriaApp - Backup.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\AntipastoPro-DemiBold_trial.ttf" />
+    <None Remove="Fonts\AntipastoPro-Light_trial.ttf" />
+    <None Remove="Fonts\AntipastoPro-Medium_trial.ttf" />
+    <None Remove="Fonts\Nexa Bold.otf" />
+    <None Remove="Fonts\Nexa Light.otf" />
+    <None Remove="Fonts\Nunito-Bold.ttf" />
+    <None Remove="Fonts\Nunito-ExtraLight.ttf" />
+    <None Remove="Fonts\Nunito-Light.ttf" />
+    <None Remove="Fonts\Nunito-Medium.ttf" />
+    <None Remove="Fonts\Nunito-Regular.ttf" />
     <None Remove="Fonts\OpenSans-Bold.ttf" />
     <None Remove="Fonts\OpenSans-Light.ttf" />
     <None Remove="Fonts\OpenSans-Regular.ttf" />
@@ -16,6 +26,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Fonts\AntipastoPro-DemiBold_trial.ttf" />
+    <EmbeddedResource Include="Fonts\AntipastoPro-Light_trial.ttf" />
+    <EmbeddedResource Include="Fonts\AntipastoPro-Medium_trial.ttf" />
+    <EmbeddedResource Include="Fonts\Nexa Bold.otf" />
+    <EmbeddedResource Include="Fonts\Nexa Light.otf" />
+    <EmbeddedResource Include="Fonts\Nunito-Bold.ttf" />
+    <EmbeddedResource Include="Fonts\Nunito-ExtraLight.ttf" />
+    <EmbeddedResource Include="Fonts\Nunito-Light.ttf" />
+    <EmbeddedResource Include="Fonts\Nunito-Medium.ttf" />
+    <EmbeddedResource Include="Fonts\Nunito-Regular.ttf" />
     <EmbeddedResource Include="Fonts\OpenSans-Bold.ttf" />
     <EmbeddedResource Include="Fonts\OpenSans-Light.ttf" />
     <EmbeddedResource Include="Fonts\OpenSans-Regular.ttf" />
