--- a/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
@@ -134,5 +134,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\KidReadyA.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="KidReadyA.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
