--- a/SoteriaAppSln/SoteriaProjectWebApi/SoteriaProjectWebApi.csproj
+++ b/SoteriaAppSln/SoteriaProjectWebApi/SoteriaProjectWebApi.csproj
@@ -17,4 +17,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SoteriaApp.Shared\SoteriaApp.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
