--- a/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
@@ -149,5 +149,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\InsightsTutorialmdpi.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\teacher.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
