added all tutorial illustations

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
@@ -142,12 +142,6 @@
     <AndroidResource Include="Resources\drawable\Settingsicon.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\DepressedChildmdpi.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\InsightsTutorialmdpi.png" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable\teacher.png" />
   </ItemGroup>
   <ItemGroup>
@@ -194,6 +188,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\DepressedChild.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Zonetutorial.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Insightstutorial.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Reports.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
