--- a/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
@@ -224,5 +224,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\girl.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cutie.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\babyboy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\youngman.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
