Added more learners

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp.Android/SoteriaApp.Android.csproj
@@ -233,5 +233,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\youngman.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\boyzin.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
