fixed star ratings

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/SoteriaApp.csproj
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/SoteriaApp.csproj
@@ -90,6 +90,9 @@
     <EmbeddedResource Update="Views\ChooseProfileType.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Controls\RatingControl.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\CopingWithDisorders.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
